# api_SIGA

./: .coverage  .gitignore  .pre-commit-config.yaml  build.sh  package-lock.json  pyproject.toml  pytest.ini  sonar-project.properties  sync.sh
.github/hooks/: post-checkout  post-merge
.github/workflows/: backend.yml  build.yml
alembic/: env.py
alembic/versions/: 07f7771afffe_update_max_length_for_phone_and_.py  08fe96213ef7_agregar_relaciones_de_id_int.py  11f836ed7a79_remove_enums_for_columns_in_db.py  2852677fff53_delete_academic_unit_id_of_table_rol.py  3345fbc8100b_add_voting_status.py  363fdc263d47_add_description_in_academic_unit.py  3caa57a6cd93_database_reduce_add_user_academic_user.py  3f5005e14ff9_agregar_id_entero_autoincremental.py  4151a7761703_update_enum.py  42a72064a616_database_reduce.py  430927dfd129_add_applications.py  4ee80ba24228_nueva_tabla_user_application_user.py  52e0bac1494b_add_default_uuid.py  5c3dbaf983a6_se_agrega_la_tabla_vote_type.py  5d2bb36c33f8_add_models_for_status.py  7439d5424792_delete_statuses.py  7da57a4632e3_add_uuid_generate_for_academic_unit.py  8d9373c7b13b_add_represent_research_group.py  901b4b8bf4be_add_voting_model.py  954b1def39bb_add_action.py  97eba642c798_delete_unique_for_email.py  a56f72e40e71_add_represent_program.py  acea7a1ecfd3_delete_column_vote_in_vote.py  b33bb03a0872_database_reduce_FK_in_rol.py  b50021caa067_agregar_consecutivo.py  c7df6171b80c_add_models_for_status.py  (+6 more)
app/: main.py
docker/: Dockerfile.build  Dockerfile.dev  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.prod.yml
(+162 files in other folders)
