[tool.poetry]
name = "OU_university"
version = "0.1.0"
description = ""
authors = ["Simón <simon.garcial@udea.edu.co>"]
readme = "README.md"
packages = [{include = "fast_api_template"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
gunicorn = "^20.1.0"
sqlalchemy = "^2.0.22"
debugpy = "^1.8.0"
psycopg2-binary = "^2.9.9"
bcrypt =  "3.1.7"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
alembic = "^1.13.3"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
email-validator = "^2.2.0"
odmantic = "^1.0.2"
pydantic-settings = "^2.5.2"
celery = "^5.2.3"
redis = "^4.3.3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
autopep8 = "^2.0.1"
black = "^23.1.0"
flower = "^1.2.0"
flake8 = "^6.0.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
